Fixed some component font sizes becoming too large after base font change

--- a/wp-content/themes/ERS/assets/styles/components/_paperclip-bootstrap.less
+++ b/wp-content/themes/ERS/assets/styles/components/_paperclip-bootstrap.less
@@ -259,6 +259,7 @@ Last change:    18/02/2015
 .navbar-default .navbar-nav > li > a {
   text-transform: uppercase;
   color: #ccc;
+  font-size: 14px;
   &:hover {
     color: #fff;
   }
