--- a/wp-content/themes/ERS/assets/styles/components/_paperclip-components.less
+++ b/wp-content/themes/ERS/assets/styles/components/_paperclip-components.less
@@ -194,6 +194,7 @@ html, body {
   .lead {
     margin: 0;
     line-height: 93px;
+    font-size: 21px;
   }
   ul {
     list-style-type: none;
@@ -228,6 +229,7 @@ html, body {
     }
     p {
       margin: 10px 0 0;
+      font-size: 14px;
       text-transform: uppercase;
     }
     span {
